--- a/pug/index.pug
+++ b/pug/index.pug
@@ -14,7 +14,7 @@ html(lang="ja")
       #index
         .contents
           .wrap-header.wrapper
-            .circle.circle-header
+            .circle.circle-header.circle-index
               div.circle-header_bar
                 div.circle-header_bar_wrap
                   span.circle-header_bar_wrap-color
@@ -64,10 +64,7 @@ html(lang="ja")
               a.btn(href="")
                 span.bg
                 span.text
-                  | Photos & works
-            
-            
-              
+                  | Photos & works    
     footer
       include includes/_footer.pug
     
