--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -1,8 +1,8 @@
 @import "_variable.scss";
 @import "_animation.scss";
-
-
-
+html{
+  font-size: 16px;
+}
 header {
   [class^="flex-"],
   [class*=" flex-"] {
@@ -462,41 +462,73 @@ main {
 // article -----------------------------------
 
 #article {
-  .thumbnail {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-    width: 100vw;
-    height: 100vh;
-    position: relative;
+  .circle{
+    width: 200px;height: 200px;
 
-    &-mask {
-      position: absolute;
-      top: 0;
-      left: 0;
-      content: "";
-      width: 100vw;
-      height: 100vh;
-      background-color: rgba(#ffffff, 0.8);
+    position: fixed;
+    z-index: -999;
+    top: 0;left: 0;
+    right: 0;bottom: 0;
+    margin: auto;
+    .circle-A{
+      width: 100%;height: 100%;
+      border-radius: 40% 40% 50% 40%/30% 50% 50%;
+      background: #ffe5e4;
+      animation: rotate 8s linear 0s infinite normal;
+    }
+    .circle-B{
+      background: white;
+      width: 80%;height: 80%;
+      border-radius: 40% 60% 50% 40%/30% 50% 50%;
+      animation: rotate 5s linear 0s infinite normal;
     }
 
-    &-title {
-      display: inline;
-      position: absolute;
-      height: 4.5em;
-      top: 0;
-      bottom: 0;
-      left: 10%;
-      margin: auto;
-    }
+  }
 
-    .scroll {
-      position: absolute;
-      bottom: 80px;
-      left: 0;
-      right: 0;
+  .news{
+    &_body{
       margin: auto;
+      width: 800px;
+      padding: 24px;
+      &_sentence{
+        &_titlebox{
+          margin: 100px 0;
+          h1{
+            font-size: 2rem;
+            margin-top: 24px;
+            text-align: center;
+            margin: 12px 0;
+            letter-spacing: 0.2em;
+          }
+          time,a{
+            color:#ff8888;
+            font-size: 1rem;
+            text-align: center;
+            display: inherit;
+            letter-spacing: 0.5em;
+          }
+          img{
+            display: block;
+            width: 640px;
+            margin: 100px auto;
+          }
+
+        }
+        &_textbox{
+          p,h1,h2,h3,h4,h5,h6{
+            margin: 16px 0;
+          }
+
+          hr{
+            width: 100%;
+            text-align: center;
+          }
+          img{
+            height: 300px;
+            width: auto;
+          }
+        }
+      }
     }
   }
 }
