--- a/pug/index.pug
+++ b/pug/index.pug
@@ -10,7 +10,6 @@ html(lang="ja")
       .circle-responsive
         span.circle-res.res-1
         span.circle-res.res-2
-        
       #index
         .contents
           .wrap-header.wrapper
@@ -41,7 +40,7 @@ html(lang="ja")
                 br
                 |  Yuki Itoh?
               
-              a.btn(href="")
+              a.btn(href="about.html")
                 span.bg
                 span.text show me more
             .wrap-self_image
@@ -71,4 +70,3 @@ html(lang="ja")
       
   
   include includes/_script.pug
-  //-   script(src="https://cdn.jsdelivr.net/npm/jquery-scrollify@1/jquery.scrollify.min.js")
