--- a/pug/includes/_head.pug
+++ b/pug/includes/_head.pug
@@ -2,7 +2,7 @@ meta(charset="UTF-8")
 meta(name="viewport" content="width=device-width, initial-scale=1.0")
 meta(http-equiv="X-UA-Compatible" content="ie=edge")
 link(rel="stylesheet" href="stylesheet/reset.css")
-link(rel="stylesheet" href="stylesheet/style.css")
+link(rel="stylesheet" href="stylesheet/style.min.css")
 link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet")
 link(href="https://fonts.googleapis.com/css?family=Montserrat:100" rel="stylesheet")
 title portfolio
