--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -1,13 +1,18 @@
+@import "_wp.scss";
+
 @import "_variable.scss";
 @import "_animation.scss";
-html{
+
+html {
   font-size: 16px;
 }
+
 header {
   [class^="flex-"],
   [class*=" flex-"] {
     position: absolute;
     display: flex;
+
     justify-content: space-between;
     flex-direction: column;
     z-index: 999;
@@ -100,6 +105,7 @@ header {
     }
   }
 }
+
 footer {
   ul {
     height: 64%;
@@ -202,6 +208,7 @@ footer {
   width: 96%;
   height: 96%;
 }
+
 .contents {
   height: 100vh;
   width: 100vw;
@@ -211,13 +218,14 @@ footer {
   position: relative;
   z-index: 1;
 }
+
 .double {
   transform: $scale;
 }
-
 $circle-color1: #a9dce6;
 $circle-color2: #d8e0fb;
 $circle-color3: #d1f4c0;
+
 .circle {
   position: absolute;
   right: 0;
@@ -230,6 +238,7 @@ $circle-color3: #d1f4c0;
   display: flex;
   justify-content: center;
   align-items: center;
+
   span {
     position: absolute;
     animation-iteration-count: infinite;
@@ -241,16 +250,18 @@ $circle-color3: #d1f4c0;
     background: $circle-color1;
     border-radius: 40% 40% 50% 40%/30% 50% 50%;
     animation: rotate 8s linear 0s backwards;
-    z-index: -2
+    z-index: -2;
   }
+
   &_header2 {
     height: 100%;
     width: 100%;
     background: #ffffff;
     border-radius: 80% 30% 50% 50%/50%;
     animation: minus_rotate 7s linear 0s backwards;
-    z-index: -2
+    z-index: -2;
   }
+
   &_3 {
     height: 180%;
     width: 180%;
@@ -258,6 +269,7 @@ $circle-color3: #d1f4c0;
     border-radius: 40% 60% 50% 40%/30% 50% 50%;
     animation: rotate 8s linear 0s backwards;
   }
+
   &_4 {
     height: 130%;
     width: 130%;
@@ -265,6 +277,7 @@ $circle-color3: #d1f4c0;
     border-radius: 80% 30% 50% 30%/50%;
     animation: minus_rotate 7s linear 0s backwards;
   }
+
   &_5 {
     height: 180%;
     width: 180%;
@@ -272,6 +285,7 @@ $circle-color3: #d1f4c0;
     border-radius: 50% 50% 50% 70%/50% 50% 70%;
     animation: rotate 8s linear 0s backwards;
   }
+
   &_6 {
     height: 120%;
     width: 120%;
@@ -281,21 +295,24 @@ $circle-color3: #d1f4c0;
   }
 }
 // index.html -----------------------------------
+
 main {
   .circle-responsive {
     display: none;
   }
-  .wrap-header {
 
+  .wrap-header {
     width: 800px;
     display: flex;
     justify-content: center;
     align-items: center;
+
     h1 {
       position: absolute;
       margin: auto;
       left: 0;
     }
+
     img {
       position: absolute;
       top: 0;
@@ -305,33 +322,34 @@ main {
       width: 320px;
       height: auto;
     }
-    .circle-header{
+
+    .circle-header {
       left: 50%;
       // transform: scale(0);
       // animation: scale .7s ease-out 1.5s forwards;
-
-      &_bar{
+      &_bar {
         // width: js
         //; transform: js;
         // background: linear-gradient(90deg,$circle-color1,$circle-color1,$circle-color2,$circle-color2);
         height: 8px;
         border-radius: 4px;
         position: absolute;
-        top: 0;bottom: 0;
+        top: 0;
+        bottom: 0;
         left: 50%;
         z-index: -999;
         margin: auto;
         transform-origin: left;
 
-        &_wrap{
+        &_wrap {
           overflow: hidden;
           width: 100%;
           height: 100%;
           position: relative;
-          width: 0%;
+          width: 0;
           animation: scale-bar 1s ease-in-out 2.6s forwards;
 
-          &-color{
+          &-color {
             position: absolute;
             top: 0;
             left: 0;
@@ -348,108 +366,123 @@ main {
     justify-content: space-between;
     flex-direction: row;
 
-    &_image{
+    &_image {
       width: 50%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
+
       img {
         border-radius: 2px;
         -o-object-fit: cover;
         object-fit: cover;
         width: 70%;
         height: 70%;
-        opacity: 1
+        opacity: 1;
       }
+
       &-sp {
         display: none;
       }
+
       &-pc {
         display: block;
       }
     }
-    &_text{
+
+    &_text {
       width: 50%;
       height: 100%;
       position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction:column;
+      flex-direction: column;
+
       h1 {
         display: inline-block;
         opacity: 1;
       }
-      h1,a{
+
+      a,
+      h1 {
         margin: 32px;
       }
-      .circle{
 
+      .circle {
         z-index: -1;
         position: absolute;
         @include middle;
       }
     }
-    .circle-self_bar{
+
+    .circle-self_bar {
       // width: js
       //; transform: js;
-
       height: 8px;
       border-radius: 4px;
       background: linear-gradient(90deg,$circle-color2,$circle-color2,$circle-color3,$circle-color3);
       position: absolute;
-      top: 0;bottom: 0;
+      top: 0;
+      bottom: 0;
       left: 50%;
       z-index: -999;
       margin: auto;
       transform-origin: left;
-      &-color{
+
+      &-color {
         background: linear-gradient(90deg,$circle-color2,$circle-color2,$circle-color3,$circle-color3);
         width: 100%;
         height: 100%;
         border-radius: 8px;
       }
-
     }
     @include btn-anime($circle-color2);
   }
+
   .wrap-works {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
 
-    &_image{
+    &_image {
       width: 70%;
       height: 100%;
       display: flex;
       justify-content: center;
       align-items: center;
+
       img {
         border-radius: 2px;
         -o-object-fit: cover;
         object-fit: cover;
         width: 80%;
         height: 80%;
-        opacity: 1
+        opacity: 1;
       }
     }
-    &_text{
+
+    &_text {
       width: 50%;
       height: 100%;
       position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction:column;
+      flex-direction: column;
+
       h1 {
         display: inline-block;
         opacity: 1;
       }
-      h1,a{
+
+      a,
+      h1 {
         margin: 32px;
       }
-      .circle{
+
+      .circle {
         z-index: -1;
         position: absolute;
         @include middle;
@@ -458,78 +491,302 @@ main {
     @include btn-anime($circle-color3);
   }
 }
-// Photos -----------------------------------
+// news -----------------------------------
+
+#news {
+  @include public_circle;
+
+  .section {
+    width: 100vw;
+    height: 100vh;
+    @include dispaly-center;
+
+    &_wrap {
+      height: auto;
+      width: 40%;
+
+      &-text {
+        @include text-line;
+      }
+    }
+  }
+
+  .wrap {
+    margin: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: calc(72vw / 3);
+    width: 72vw;
+    grid-gap: 0.1rem;
+    justify-content: space-between;
+
+    &-contents {
+      height: 100%;
+      width: 100%;
+      border-radius: 2px;
+      position: relative;
+      top: 0;
+      left: 0;
+      overflow: hidden;
+
+      img {
+        height: 100%;
+        width: 100%;
+        -o-object-fit: cover;
+        object-fit: cover;
+        transition: all 300ms ease-in 200ms;
+      }
+
+      &:hover > .wrap-contents_card {
+        opacity: 1;
+      }
+
+      &:hover > img {
+        transform: translateY(-100%);
+      }
+
+      &_card {
+        position: absolute;
+        z-index: -2;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background: rgba(#6f6f6f, 0.5);
+        padding: 2rem;
+        box-sizing: border-box;
+        opacity: 0;
+        transition: all 300ms ease-in 300ms;
+
+        h2,
+        p {
+          color: $white;
+        }
+
+        h2 {
+          font-size: 1.4rem;
+        }
+
+        p {
+          font-size: 0.8rem;
+        }
+      }
+    }
+  }
+}
+// about -----------------------------------
+
+#about {
+  @include public_circle;
+
+  .name {
+    &-text {
+      letter-spacing: 0.8rem;
+      // @include text_line;
+    }
+    width: 100vw;
+    height: 100vh;
+    @include dispaly-center;
+  }
+
+  .introduction {
+    margin: auto;
+    width: 72%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas: 'skill bio' 'skill text';
+
+    &_skill {
+      grid-area: skill;
+
+      li {
+        padding-left: 1rem;
+      }
+
+      &-list {
+        height: 32rem;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        &-title {
+          padding-left: 0 !important;
+          color: $special_color;
+        }
+      }
+    }
+
+    &_bio {
+      grid-area: bio;
+
+      &-list {
+        height: 80%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        span {
+          color: $special_color;
+          margin-right: 2rem;
+        }
+      }
+    }
+
+    &_text {
+      span {
+        color: $special_color;
+      }
+      line-height: 2rem;
+      grid-area: text;
+      @include text_line;
+    }
+  }
+}
 // article -----------------------------------
 
 #article {
-  .circle{
-    width: 200px;height: 200px;
-
-    position: fixed;
-    z-index: -999;
-    top: 0;left: 0;
-    right: 0;bottom: 0;
-    margin: auto;
-    .circle-A{
-      width: 100%;height: 100%;
-      border-radius: 40% 40% 50% 40%/30% 50% 50%;
-      background: #ffe5e4;
-      animation: rotate 8s linear 0s infinite normal;
-    }
-    .circle-B{
-      background: white;
-      width: 80%;height: 80%;
-      border-radius: 40% 60% 50% 40%/30% 50% 50%;
-      animation: rotate 5s linear 0s infinite normal;
-    }
-
-  }
-
-  .news{
-    &_body{
+  @include public_circle;
+  
+  .news {
+    &_body {
       margin: auto;
       width: 800px;
       padding: 24px;
-      &_sentence{
-        &_titlebox{
+      &_sentence {
+        &_titlebox {
           margin: 100px 0;
-          h1{
+          h1 {
             font-size: 2rem;
             margin-top: 24px;
             text-align: center;
             margin: 12px 0;
             letter-spacing: 0.2em;
           }
-          time,a{
-            color:#ff8888;
+
+          a,
+          time {
+            color: $special_color;
             font-size: 1rem;
             text-align: center;
             display: inherit;
             letter-spacing: 0.5em;
           }
-          img{
+
+          img {
             display: block;
             width: 640px;
             margin: 100px auto;
           }
-
         }
-        &_textbox{
-          p,h1,h2,h3,h4,h5,h6{
-            margin: 16px 0;
-          }
+        &_textbox {
+          text-align: center;
+          width: 100%;
 
-          hr{
+          hr {
             width: 100%;
             text-align: center;
+
+          }
+          h1 {
+            font-size: 1.5rem;
+            display: inline-block;
+          }
+          h2{
+            font-size: 1.2rem;
           }
           img{
-            height: 300px;
-            width: auto;
+            width: 50%;
+            display: inline-block;
+          }
+          p {
+
+            margin: 1rem 0;
+            @include text_line;
+
+          }
+        }
+      }
+      &_button {
+        margin-top: 5rem;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+
+        &-next,
+        &-prev {
+
+          font-size: 1rem;
+          position: relative;
+          overflow: hidden;
+
+          p{
+            transition: all 0.2s ease-in .2s;
+          }
+          span{
+            transition: all 0.2s ease-in .2s;
+          }
+
+          &:hover > p {
+            transform: rotateX(90deg);
+          }
+          &:hover > .news_body_button-prev-span{
+            transform: translateX(-0.2rem);
+          }
+          &:hover > .news_body_button-next-span{
+            transform: translateX(0.2rem);
+          }
+        }
+
+        &-prev {
+          &-span {
+
+            transform: translateX(3rem);
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 10px 20px 10px 0;
+            border-color: transparent $black transparent transparent;
+          }
+        }
+
+        &-next {
+          &-span {
+            transform: translateX(-3rem);
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            margin: auto;
+            width: 0;
+            height: 0;
+            border-style: solid;
+            border-width: 10px 0 10px 20px;
+            border-color: transparent transparent transparent $black;
           }
         }
       }
     }
   }
+}
+::-moz-selection {
+    background: $special_color;
+    color: #fff;
+}
+::selection {
+    background: $special_color;
+    color: #fff;
 }
 @import "_responsive.scss";
